force-app/main/default/objects/Opportunity/fields/AmountOfTravellers__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTravellers__c</fullName>
    <label>AmountOfTravellers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>