force-app/main/default/objects/Opportunity/fields/TravelEndDate__c.field-meta.xml
<CustomField>
    <fullName>TravelEndDate__c</fullName>
    <label>Travel End Date</label>
    <type>Date</type>
</CustomField>