force-app/main/default/objects/Opportunity/fields/TravelStartDate__c.field-meta.xml
<CustomField>
    <fullName>TravelStartDate__c</fullName>
    <label>Travel Start Date</label>
    <type>Date</type>
</CustomField>